--- a/feedback.html
+++ b/feedback.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/feedback.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./assets/epicode_logo.png" alt="logo epicode" />
+      </div>
+    </header>
+    <main>
+      <h2 class="title-h2">Tell us how it's going</h2>
+      <p class="paragraph">
+        From 0 to 10, how likely are you to recommend EPICODE to a friend or a
+        colleague?
+      </p>
+      <div id="star"></div>
+      <p class="paragraph">
+        Leave us an open feedback about your experience so far
+      </p>
+      <input type="text" placeholder="Write your comment here" />
+      <div>
+        <a href="#"><button>MORE INFO</button></a>
+      </div>
+    </main>
+  </body>
 </html>
