--- a/feedback.html
+++ b/feedback.html
@@ -33,7 +33,7 @@
         colleague?
       </p>
       <div id="star"></div>
-      <p class="paragraph">
+      <p class="paragraph2">
         Leave us an open feedback about your experience so far
       </p>
       <input type="text" placeholder="Write your comment here" />
