--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <h2 class="title-h2">Results</h2>
-      <p class="paragraph">The summary of your answers</p>
+      <p class="paragraph">The summary of your answers:</p>
     </main>
     <div id="sommaCorrette"></div>
     <div id="grafico" width="400" height="400"></div>
