--- a/results.html
+++ b/results.html
@@ -6,6 +6,7 @@
     <title>Results</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/result.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <header>
@@ -21,7 +22,9 @@
     <div id="grafico" width="400" height="400"></div>
     <div id="sommaErrate"></div>
     <a href="#"><button>RATE US</button></a>
+    <div id="container-grafico">
+      <canvas id="myCanvas"></canvas>
+    </div>
     <script src="./js/result.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
