--- a/benchmark.html
+++ b/benchmark.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benchmark</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/benchmark.css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <img src="./assets/epicode_logo.png" alt="logo epicode" />
-      </div>
-      <div id="contatore"></div>
-    </header>
-    <main>
-      <conteiner id="question"> </conteiner>
-      <conteiner id="answer"></conteiner>
-    </main>
-    <footer id="questionNumber"></footer>
-    <script src="./js/banchmark.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Benchmark</title>
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/benchmark.css" />
+</head>
+
+<body>
+  <header>
+    <div id="logo">
+      <img src="./assets/epicode_logo.png" alt="logo epicode" />
+    </div>
+    <div id="contatore"></div>
+  </header>
+  <main>
+    <conteiner id="question"> </conteiner>
+    <conteiner id="answer"></conteiner>
+    <div id="answer-1"></div>
+    <div id="answer-2"></div>
+    <div id="answer-3"></div>
+    <div id="answer-4"></div>
+  </main>
+  <footer id="questionNumber"></footer>
+  <script src="./js/banchmark.js"></script>
+</body>
+
 </html>
