add css grafico

--- a/results.html
+++ b/results.html
@@ -34,10 +34,13 @@
     <div id="sommaCorrette"></div>
     <div id="grafico" width="400" height="400"></div>
     <div id="sommaErrate"></div>
-    <a href="#"><button>RATE US</button></a>
     <div id="container-grafico">
       <canvas id="myCanvas"></canvas>
     </div>
+    <div id="contenitore-bottone-result">
+      <a href="#"><button>RATE US</button></a>
+    </div>
+
     <script src="./js/result.js"></script>
   </body>
 </html>
