--- a/welcome.html
+++ b/welcome.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/welcome.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Liter&family=Montserrat:ital@1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome</title>
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/welcome.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Liter&family=Montserrat:ital@1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet">
-</head>
-
-<body>
-  <header>
-    <div id="logo">
-      <img src="./assets/epicode_logo.png" alt="logo epicode" />
-    </div>
-  </header>
-  <main>
-    <h1>Welcome to <strong>your exam</strong></h1>
-    <h3 id="istruzioni">Instruction</h3>
-    <p id="paragrafo">
-      We don't expect most engineers to know the answers to all of these
-      questions, so don't worry if you're unsure of a few of them.
-    </p>
-    <div id="lista">
-      <ul>
-        <li>
-          Each questions is <strong>timed</strong> and can only be
-          <strong>answered once</strong>.
-        </li>
-        <li>
-          Changing browser tab or opening other windows will<strong>invalidate the question</strong>.
-        </li>
-        <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-      </ul>
-    </div>
-    <div id="check-btn">
-      <input type="checkbox" />
-      <span>I promise to answer myself without help from anyone</span>
-      <a href="#"><button>PROCEED</button></a>
-    </div>
-  </main>
-</body>
-
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./assets/epicode_logo.png" alt="logo epicode" />
+      </div>
+    </header>
+    <main>
+      <h1>Welcome to <strong>your exam</strong></h1>
+      <h3 id="istruzioni">Instruction</h3>
+      <p id="paragrafo">
+        We don't expect most engineers to know the answers to all of these
+        questions, so don't worry if you're unsure of a few of them.
+      </p>
+      <div id="lista">
+        <ul>
+          <li>
+            Each questions is <strong>timed</strong> and can only be
+            <strong>answered once</strong>.
+          </li>
+          <li>
+            Changing browser tab or opening other windows will<strong
+              >invalidate the question</strong
+            >.
+          </li>
+          <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+        </ul>
+      </div>
+      <div id="check-btn">
+        <input id="check" type="checkbox" />
+        <label for="check"
+          >I promise to answer myself without help from anyone</label
+        >
+        <a href="#"><button class="btn-proceed">PROCEED</button></a>
+      </div>
+    </main>
+  </body>
 </html>
