--- a/feedback.html
+++ b/feedback.html
@@ -32,7 +32,7 @@
         From 0 to 10, how likely are you to recommend EPICODE to a friend or a
         colleague?
       </p>
-      <div id="star"></div>
+      <div class="stars" id="starContainer"></div>
       <p class="paragraph2">
         Leave us an open feedback about your experience so far
       </p>
