--- a/feedback.html
+++ b/feedback.html
@@ -33,7 +33,7 @@
         colleague?
       </p>
       <div class="stars" id="starContainer"></div>
-      <span id="ratingValue">0</span>
+      <span id="ratingValue"></span>
       <p class="paragraph2">
         Leave us an open feedback about your experience so far
       </p>
