--- a/results.html
+++ b/results.html
@@ -38,7 +38,9 @@
       <canvas id="myCanvas"></canvas>
     </div>
     <div id="contenitore-bottone-result">
-      <a href="#"><button>RATE US</button></a>
+      <a href="http://127.0.0.1:5500/benchmark.html"
+        ><button>RATE US</button></a
+      >
     </div>
 
     <script src="./js/result.js"></script>
