--- a/welcome.html
+++ b/welcome.html
@@ -53,7 +53,9 @@
         <label for="check"
           >I promise to answer myself without help from anyone</label
         >
-        <a href="#"><button class="btn-proceed">PROCEED</button></a>
+        <a href="http://127.0.0.1:5500/results.html"
+          ><button class="btn-proceed">PROCEED</button></a
+        >
       </div>
     </main>
   </body>
