--- a/benchmark.html
+++ b/benchmark.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Benchmark</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/benchmark.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Liter&family=Montserrat:ital@1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Benchmark</title>
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/benchmark.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Liter&family=Montserrat:ital@1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet" />
-</head>
-
-<body>
-  <header>
-    <div id="logo">
-      <img src="./assets/epicode_logo.png" alt="logo epicode" />
-    </div>
-    <div id="contatore"></div>
-  </header>
-  <main>
-    <conteiner id="question"> </conteiner>
-    <conteiner id="answer"></conteiner>
-    <div id="answer-1"></div>
-    <div id="answer-2"></div>
-    <div id="answer-3"></div>
-    <div id="answer-4"></div>
-
-  </main>
-  <footer id="questionNumber"></footer>
-  <script src="./js/banchmark.js"></script>
-</body>
-
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./assets/epicode_logo.png" alt="logo epicode" />
+      </div>
+      <div id="contatore"></div>
+    </header>
+    <main>
+      <conteiner id="question"> </conteiner>
+      <conteiner id="answer"></conteiner>
+      <div id="answer-1"></div>
+      <div id="answer-2"></div>
+      <div id="answer-3"></div>
+      <div id="answer-4"></div>
+      <div><button id="incrementBtn">Vai alla domanda successiva</button></div>
+    </main>
+    <footer id="questionNumber">
+      <div id="count-question">
+        <p>QUESTION <span id="output">1</span> <span class="ten">/ 10</span></p>
+      </div>
+    </footer>
+    <script src="./js/banchmark.js"></script>
+  </body>
 </html>
