--- a/benchmark.html
+++ b/benchmark.html
@@ -35,13 +35,8 @@
       <div id="answer-2"></div>
       <div id="answer-3"></div>
       <div id="answer-4"></div>
-      <div><button id="incrementBtn">Vai alla domanda successiva</button></div>
     </main>
-    <footer id="questionNumber">
-      <div id="count-question">
-        <p>QUESTION <span id="output">1</span> <span class="ten">/ 10</span></p>
-      </div>
-    </footer>
+    <footer id="questionNumber"></footer>
     <script src="./js/banchmark.js"></script>
   </body>
 </html>
