--- a/benchmark.html
+++ b/benchmark.html
@@ -49,7 +49,11 @@
       </div>
     </main>
     <div><button id="procedi">Procedi →</button></div>
-    <footer id="questionNumber"></footer>
+    <footer id="questionNumber">
+      <div id="count-question">
+        <p>QUESTION <span id="output">1</span> <span class="ten">/ 10</span></p>
+      </div>
+    </footer>
     <script src="./js/banchmark.js"></script>
   </body>
 </html>
