Link-welcome/result

--- a/welcome.html
+++ b/welcome.html
@@ -53,7 +53,7 @@
         <label for="check"
           >I promise to answer myself without help from anyone</label
         >
-        <a href="http://127.0.0.1:5500/results.html"
+        <a href="./benchmark.html"
           ><button class="btn-proceed">PROCEED</button></a
         >
       </div>
