--- a/results.html
+++ b/results.html
@@ -40,9 +40,7 @@
       <div><h2>Wrong</h2></div>
     </div>
     <div id="contenitore-bottone-result">
-      <a href="http://127.0.0.1:5500/benchmark.html"
-        ><button>RATE US</button></a
-      >
+      <a href="./feedback.html"><button>RATE US</button></a>
     </div>
 
     <script src="./js/result.js"></script>
