adds css style on grafic and js

--- a/results.html
+++ b/results.html
@@ -36,7 +36,11 @@
     <div id="sommaErrate"></div>
     <div id="container-grafico">
       <div><h2>Correct</h2></div>
-      <canvas id="myCanvas"></canvas>
+      <canvas id="myCanvas"> </canvas>
+      <p id="paragrafo-centro1" class="centro-text"></p>
+      <p id="paragrafo-centro3"></p>
+
+      <p id="paragrafo-centro2" class="centro-text"></p>
       <div><h2>Wrong</h2></div>
     </div>
     <div id="contenitore-bottone-result">
