form-in-feedback

--- a/feedback.html
+++ b/feedback.html
@@ -37,11 +37,13 @@
       <p class="paragraph2">
         Leave us an open feedback about your experience so far
       </p>
-      <input type="text" placeholder="Write your comment here" />
-      <hr />
-      <div>
-        <a href="#"><button>MORE INFO</button></a>
-      </div>
+      <form>
+        <input type="text" placeholder="Write your comment here" />
+        <hr />
+        <div>
+          <a href="#"><button>MORE INFO</button></a>
+        </div>
+      </form>
     </main>
     <script src="./js/feedback.js"></script>
   </body>
