css-button+formbranch-Giulia

--- a/benchmark.html
+++ b/benchmark.html
@@ -47,7 +47,7 @@
         <div id="answer-4"></div>
       </div>
     </main>
-    <div><button id="procedi">Procedi →</button></div>
+    <div><button id="procedi">PROCEED</button></div>
     <footer id="questionNumber">
       <div id="count-question">
         <p>QUESTION <span id="output">1</span> <span class="ten">/ 10</span></p>
