result page word on graphic - pierattilio

--- a/results.html
+++ b/results.html
@@ -39,7 +39,7 @@
       <canvas id="myCanvas"> </canvas>
       <p id="paragrafo-centro1" class="centro-text"></p>
       <p id="paragrafo-centro3"></p>
-
+      <p id="paragrafo-centro4"></p>
       <p id="paragrafo-centro2" class="centro-text"></p>
       <div><h2>Wrong</h2></div>
     </div>
