--- a/results.html
+++ b/results.html
@@ -35,13 +35,13 @@
     <div id="grafico" width="400" height="400"></div>
     <div id="sommaErrate"></div>
     <div id="container-grafico">
-      <div><h2>Correct</h2></div>
+      <div id="result-counterrigth"></div>
       <canvas id="myCanvas"> </canvas>
       <p id="paragrafo-centro1" class="centro-text"></p>
       <p id="paragrafo-centro3"></p>
       <p id="paragrafo-centro4"></p>
       <p id="paragrafo-centro2" class="centro-text"></p>
-      <div><h2>Wrong</h2></div>
+      <div id="result-counterwrong"></div>
     </div>
     <div id="contenitore-bottone-result">
       <a href="./feedback.html"><button>RATE US</button></a>
